fix scrollbar

--- a/assets/css/components/blogpage.css
+++ b/assets/css/components/blogpage.css
@@ -61,7 +61,17 @@
   border-left: 1px solid var(--color-border);
     
   gap: var(--space-4, 1rem);
-  height: fit-content;
+  height: calc(100dvh - 8rem);
+  overflow-y: auto;
+
+  /*Hide scrollbar*/
+  overscroll-behavior: contain;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .c-article-header {
